# DataHandler

./: .clang-format  .gitignore  CMakeLists.txt  run.bat
cmake/: clang-32bit-toolchain.cmake  clang-64bit-toolchain.cmake
doc/: cpp_naming_style.md
res/qss/: windows.qss
res/rc/: images.qrc  logo.rc  qss.qrc  translation.qrc  version_info.rc.in
res/translation/: en_US.qm  en_US.ts  zh_CN.ts
res/ui/: aka_auth_loading.ui  authenticator.ui  clear_card_loading.ui  ftp_loading.ui  loading.ui  main_window.ui  order_window.ui  templet.ui  write_card_loading.ui
src/: CMakeLists.txt  main.cpp
src/app/: aka_auth_loading.cpp  aka_auth_loading.h  authenticator.cpp  authenticator.h  clear_card_loading.cpp  clear_card_loading.h  ftp_loading.cpp  ftp_loading.h  loading.cpp  loading.h  main_window.cpp  main_window.h  order_window.cpp  order_window.h  write_card_loading.cpp  write_card_loading.h
src/card-reader/: card_reader.hpp  card_reader_factory.hpp
src/card-reader/pcsc/: pcsc.cpp  pcsc.h  pcsc_exception.hpp
src/dms/: dms.cpp  dms.h  dms_order_info.h
src/do-order/: do_order.cpp  do_order.h
src/encrypt/encryptors/: hsmbase.cpp  hsmbase.h
src/encrypt/openssl/: CryptoUtils.cpp  CryptoUtils.h
src/info/: order.cpp  order.h  path.cpp  path.h  person_data.cpp  person_data.h  script.cpp  script.h
src/model/: dms_batch_files.hpp  dms_batch_list.hpp  dms_bind_record.hpp  dms_delete_record.hpp  dms_order_conf.hpp  dms_perso_data.hpp  dms_process_record.hpp  dms_product_orders.hpp  dms_record_logs.hpp  dms_remake.hpp  dms_remake_file.hpp  dms_remake_record.hpp  dms_task_list.hpp  order_table.hpp  xh_dataload_record.hpp  xh_datatool_record.hpp  xh_order_list.hpp  xh_prjcfg.hpp  xh_task_list.hpp
src/myorm/: batch.hpp  connection.cpp  connection.h  connection_pool.cpp  connection_pool.h  database.cpp  database.h  model.hpp  transaction.cpp  transaction.h
src/order/: order.cpp  order.h  path.cpp  path.h  person_data.cpp  person_data.h  script.cpp  script.h
src/order-info/: order.cpp  order.h  path.cpp  path.h  person_data.cpp  person_data.h  script.cpp  script.h
src/order-processing/: order_processing.cpp  order_processing.h
src/public/: public.cpp  public.h
src/public/filesystem/: directory.cpp  directory.h  file.cpp  file.h
src/public/ftp/: ftp.cpp  ftp.h  ftplib.cpp  ftplib.h
src/public/json/: CMakeLists.txt  json.cpp  json.h  parser.cpp  parser.h
src/public/qt-utility/: qt_utility.cpp  qt_utility.h
src/public/reflect/: CMakeLists.txt  class_factory.cpp  class_factory.h  class_field.hpp  class_method.hpp  class_register.hpp
src/public/utility/: CMakeLists.txt  ini_file.cpp  ini_file.h  logger.cpp  logger.h  singleton.hpp  string.cpp  string.h  value.cpp  value.h
src/tabulation/: distribution_record.h  tabulation.cpp  tabulation.h
src/task/: aka_auth.hpp  card.cpp  card.h  clear_card.hpp  generating_records.hpp  handle_order.hpp  input_card.hpp  reset_card.hpp  upload_file.hpp  upload_prd.hpp  write_card.hpp
src/utils/: fuzzy_filter_proxy_model.hpp  utils.cpp  utils.h
test/: CMakeLists.txt  ftp.cpp  test.cpp  test_factory.cpp  test_thread.cpp  你好.txt
test/auth/: auth_test.cpp  temp_ki_op_opc.txt
test/ftp/: ftp_test.cpp
test/ftp/测试上传目录/: b.txt  测试.txt
test/mariadb/: mariadb_test.cpp
test/time/: time_test.cpp
test/xlnt/: xlnt_test.cpp
tests/: CMakeLists.txt
